--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">Car Inventory</a>
+            <a href="{{ url_for('site.home') }}" class="navbar-brand">Car Inventory</a>
             <button 
                 class="navbar-toggler" 
                 type="button" 
@@ -44,8 +44,8 @@
             </div>
         </div>
     </nav>
-    {% block content %}
-    {% endblock %}
+{% block content %}
+{% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
 </body>
